Check upgradeContacts succeeded

BUG: 319362